--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ body {
         margin-left: 36%;
         text-align: center;
         font-size: 5vw;
-        background-color: #1a284d;
+        background-color: #2c417b;
         color: rgb(255, 255, 255);
         border-radius: 30px;
         opacity: 93%;
