--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
       display: grid;
       grid-template-columns: repeat(7, 17.6%);
       grid-template-rows: repeat(6, 16%);
-      gap: 1px;
       background-color: #ccc;
       width: 60vw;
       margin: 5vw auto;
@@ -19,14 +18,13 @@ body {
       align-items: center;
       justify-content: center;
       background-color: #294281;
-      border: 0.5vw solid #888;
+      border: 0.3vw solid #0b0b0b;
       cursor: pointer;
     }
     
     .casa-vazia {
       background-color: transparent;
       cursor: default;
-    
     }
     
     
@@ -128,7 +126,7 @@ body {
       #leads {
         list-style-type: none;
         text-align: center;
-        color: #efe7e7;
+        color: antiquewhite;
         margin-top: 2vw;
         font-weight: bold;
         background-color: #294281;
